[package]
name = "ipverse-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ipverse-mcp"

[lib]
name = "ipverse_mcp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = { version = "2.9", features = ["serde"] }
git2 = "0.20.2"
thiserror = "2.0.16"
dirs = "6.0.0"
